Salesforce CPQ/main/default/objects/BlockPrice__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price for the parent product in specified quantity range.</description>
    <inlineHelpText>Price for the parent product in specified quantity range.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>