Salesforce CPQ/main/default/objects/BlockPrice__c/fields/PriceBook2__c.field-meta.xml
<CustomField>
    <fullName>PriceBook2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price Book to which block pricing applies.</description>
    <inlineHelpText>Select the Price Book that should receive block pricing when applicable.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Block Prices</relationshipLabel>
    <relationshipName>BlockPrices</relationshipName>
    <type>Lookup</type>
</CustomField>