Salesforce CPQ/main/default/objects/BlockPrice__c/fields/QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The quote line where this block price applies to when an order product is created.</description>
    <inlineHelpText>The quote line where this block price applies to when an order product is created.</inlineHelpText>
    <label>Quote Line</label>
    <referenceTo>QuoteLine__c</referenceTo>
    <relationshipLabel>Block Prices</relationshipLabel>
    <relationshipName>BlockPrices</relationshipName>
    <type>Lookup</type>
</CustomField>