Salesforce CPQ/main/default/objects/BlockPrice__c/fields/UpperBound__c.field-meta.xml
<CustomField>
    <fullName>UpperBound__c</fullName>
    <description>Upper bound of the quantity range for this block price.</description>
    <inlineHelpText>Upper bound of the quantity range for this block price.</inlineHelpText>
    <label>Upper Bound</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>